src/main/java/com/example/demo/common/error/CustomException.java
package com.example.demo.common.error;

import org.springframework.http.HttpStatus;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class CustomException extends RuntimeException {
	private ErrorCode errorCode;

	public HttpStatus getStatus() {
		return this.errorCode.getStatus();
	}

	public String getMessage() {
		return this.errorCode.getMessage();
	}
}
